fix: wrapcenter correct

--- a/style.css
+++ b/style.css
@@ -77,8 +77,10 @@ main {
 }
 
 .wrapcenter {
-  display: block;
-  margin: 5px 5px;
+  font-family: 'Franklin Gothic Medium', sans-serif;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 }
 
 section {
